add more testing lessons

--- a/content/lessons/10-testing/01-introduction-to-testing.mdx
+++ b/content/lessons/10-testing/01-introduction-to-testing.mdx
@@ -11,6 +11,20 @@ duration: "20 minutes"
 
 Welcome to Test Automation with C#! This course will teach you how to write automated tests, even if you've only done manual testing before.
 
+## Prerequisites
+
+This lesson is perfect for complete beginners! You don't need any C# knowledge to understand testing concepts.
+
+**What you need:**
+- ✅ Interest in software testing
+- ✅ Basic understanding of what software does
+
+**Optional (helpful but not required):**
+- Manual testing experience
+- Basic programming concepts
+
+⏱️ **If starting from scratch:** You can start right here!
+
 ## What is Automated Testing?
 
 Automated testing means writing code that tests other code. Instead of manually clicking buttons and checking results, you write test scripts that do it automatically.
@@ -298,6 +312,41 @@ class Program
 - **Mock**: A fake object used in testing
 - **Arrange-Act-Assert**: Pattern for structuring tests
 
+## Your Learning Project: Task Manager API
+
+Throughout this testing section, you'll work with a **real C# project**: the Task Manager API. This is a complete RESTful API that demonstrates professional testing practices.
+
+### What You'll Test
+
+The Task Manager API includes:
+- **Tasks** with titles, descriptions, priorities, and due dates
+- **Status workflow** (Todo → InProgress → Done)
+- **Validation rules** (required fields, date validation, etc.)
+- **Business logic** (status transitions, overdue detection)
+- **CRUD operations** via REST API
+
+### Why a Real Project?
+
+Instead of isolated examples, you'll:
+- ✅ Test actual production-quality code
+- ✅ See realistic scenarios
+- ✅ Practice both manual and automated testing
+- ✅ Build a professional test suite
+- ✅ Apply concepts immediately
+
+### Included in the Project
+
+```
+sample-projects/TaskManagerAPI/
+├── API with 8 endpoints
+├── Business logic with validations
+├── 28 comprehensive tests (unit + integration)
+├── Manual testing guide
+└── Complete documentation
+```
+
+You'll explore this project in **Lesson 00: Project Overview** and use it throughout all testing lessons!
+
 ## What's Next?
 
 Now that you understand what testing is and why it's important, let's set up your testing environment!
@@ -306,6 +355,7 @@ In the next lesson, you'll:
 - Install the .NET SDK
 - Set up Visual Studio Code
 - Create your first test project
+- Set up the Task Manager API
 - Run your first automated test
 
 **Ready to start writing automated tests? Let's go!** 🚀
